--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <div class="web-description">
                         <strong>Prensa generalista con cobertura musical.</strong> Análisis de la desigualdad de género en medios generalistas y estudio de la diversidad cultural en la música española del período de entreguerras.
                     </div>
-                    <a href="index (ELSOL).html" class="btn-acceso">📰 Acceder al Análisis</a>
+                    <a href="https://mariapalaciosnieto.github.io/analisis-musical-el-sol/" class="btn-acceso">🎼 Acceder al Análisis</a>
                 </div>
             </div>
         </div>
