--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Análisis Musical Computacional de Prensa Histórica - Proyecto LexiMus</title>
+    <title>Análisis Musical de Fuentes Históricas - Proyecto LexiMus</title>
     <style>
         * {
             margin: 0;
@@ -333,7 +333,7 @@
         <div class="intro-section">
             <h2>🔬 Presentación del Proyecto</h2>
             <div class="intro-text">
-                Leximus: léxico en español y ontología de la música, es un proyecto coordinado desde el Instituto Complutense de Ciencias de la Música, donde participan la Universidad de Salamanca y la Universidad de La Rioja. Dentro del proyecto, desde la Universidad de Salamanca se está trabajando con fuentes musicales en prensa histórica. A través de grandes corpus de texto, que abarcan desde el siglo XVIII hasta la actualidad, y mediante un análisis computacional, en esta web se comparten los primeros datos estadísticos que estudian fuentes en prensa histórica con contenido musical.
+                A través de grandes corpus de texto, que abarcan desde el siglo XVIII hasta la actualidad, y mediante un análisis computacional, en esta web se comparten los primeros datos estadísticos que estudian fuentes en prensa histórica con contenido musical.
             </div>
             
             <div class="destacado">
@@ -353,19 +353,19 @@
             <h2>📊 Estado Actual del Corpus</h2>
             <div class="corpus-stats">
                 <div class="corpus-stat">
-                    <span class="number">3</span>
+                    <span class="number">5</span>
                     <span class="stat-label">Fuentes Procesadas</span>
                 </div>
                 <div class="corpus-stat">
-                    <span class="number">1,664</span>
+                    <span class="number">1,901</span>
                     <span class="stat-label">Números/Artículos</span>
                 </div>
                 <div class="corpus-stat">
-                    <span class="number">2,591,170</span>
+                    <span class="number">4,657,350</span>
                     <span class="stat-label">Palabras Analizadas</span>
                 </div>
                 <div class="corpus-stat">
-                    <span class="number">25</span>
+                    <span class="number">53</span>
                     <span class="stat-label">Años de Cobertura</span>
                 </div>
             </div>
@@ -466,7 +466,71 @@
                     <div class="web-description">
                         <strong>Prensa generalista con cobertura musical.</strong> Análisis de la desigualdad de género en medios generalistas y estudio de la diversidad cultural en la música española del período de entreguerras.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/analisis-musical-el-sol/" class="btn-acceso">🎼 Acceder al Análisis</a>
+                    <a href="https://mariapalaciosnieto.github.io/analisis-musical-el-sol/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                </div>
+            </div>
+
+            <!-- Crónica de la Música -->
+            <div class="web-card">
+                <div class="web-card-header">
+                    <h3>Crónica de la Música</h3>
+                    <div class="periodo">1878-1882 • Consolidación Periodística</div>
+                </div>
+                <div class="web-card-body">
+                    <div class="web-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">223</span>
+                            <span class="stat-label">Números</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">1,790,195</span>
+                            <span class="stat-label">Palabras</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">18.2%</span>
+                            <span class="stat-label">Densidad Musical</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">0.82:1</span>
+                            <span class="stat-label">Ratio H:M</span>
+                        </div>
+                    </div>
+                    <div class="web-description">
+                        <strong>Segundo periódico musical español.</strong> Dirigido por Andrés Vidal y Llimona, consolidó el modelo de periodismo musical especializado durante la época de auge operístico en Madrid, documentando la transición del bel canto al verismo.
+                    </div>
+                    <a href="https://mariapalaciosnieto.github.io/cronicamusica/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                </div>
+            </div>
+
+            <!-- Música Barcelona -->
+            <div class="web-card">
+                <div class="web-card-header">
+                    <h3>Música Barcelona</h3>
+                    <div class="periodo">1929-1931 • Crisis y Vanguardias</div>
+                </div>
+                <div class="web-card-body">
+                    <div class="web-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">14</span>
+                            <span class="stat-label">Números</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">275,590</span>
+                            <span class="stat-label">Palabras</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">16.8%</span>
+                            <span class="stat-label">Densidad Musical</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">1.43:1</span>
+                            <span class="stat-label">Ratio H:M</span>
+                        </div>
+                    </div>
+                    <div class="web-description">
+                        <strong>Revista iberoamericana de vanguardia.</strong> Publicada en Barcelona durante la crisis del 29, documentó la recepción de las corrientes musicales modernas y las conexiones culturales España-América en el contexto de la Segunda República.
+                    </div>
+                    <a href="https://mariapalaciosnieto.github.io/musica/" class="btn-acceso">🎻 Acceder al Análisis</a>
                 </div>
             </div>
         </div>
