--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <div class="intro-section">
             <h2>🔬 Presentación del Proyecto</h2>
             <div class="intro-text">
-                A través de grandes corpus de texto, que abarcan desde el siglo XVIII hasta la actualidad, y mediante un análisis computacional, en esta web se comparten los primeros datos estadísticos que estudian fuentes en prensa histórica con contenido musical.
+                eximus: léxico en español y ontología de la música, es un proyecto coordinado desde el Instituto Complutense de Ciencias de la Música, donde participan la Universidad de Salamanca y la Universidad de La Rioja. Dentro del proyecto, desde la Universidad de Salamanca se está trabajando con fuentes musicales en prensa histórica. A través de grandes corpus de texto, que abarcan desde el siglo XVIII hasta la actualidad, y mediante un análisis computacional, en esta web se comparten los primeros datos estadísticos que estudian fuentes en prensa histórica con contenido musical.
             </div>
             
             <div class="destacado">
