--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <div class="web-description">
                         <strong>Primera revista musical española.</strong> Análisis del panorama musical madrileño del Romanticismo temprano, con predominio de la ópera italiana y las grandes divas del bel canto. Documento único de la recepción del gusto romántico en España.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/IberiaMusical/" class="btn-acceso">🎼 Acceder al Análisis</a>
+                    <a href="https://LeximusUSAL.github.io/IberiaMusical/" class="btn-acceso">🎼 Acceder al Análisis</a>
                 </div>
             </div>
 
@@ -434,7 +434,7 @@
                     <div class="web-description">
                         <strong>Revista Musical de Bilbao e Hispanoamericana.</strong> Primera evidencia de equilibrio de género en prensa musical especializada. Análisis de la profesionalización de la crítica musical española y las redes culturales hispanoamericanas.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/RevistasBMH/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                    <a href="https://LeximusUSAL.github.io/RevistasBMH/" class="btn-acceso">🎻 Acceder al Análisis</a>
                 </div>
             </div>
 
@@ -466,7 +466,7 @@
                     <div class="web-description">
                         <strong>Prensa generalista con cobertura musical.</strong> Análisis de la desigualdad de género en medios generalistas y estudio de la diversidad cultural en la música española del período de entreguerras.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/analisis-musical-el-sol/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                    <a href="https://LeximusUSAL.github.io/analisis-musical-el-sol/" class="btn-acceso">🎻 Acceder al Análisis</a>
                 </div>
             </div>
 
@@ -498,7 +498,7 @@
                     <div class="web-description">
                         <strong>Segundo periódico musical español.</strong> Dirigido por Andrés Vidal y Llimona, consolidó el modelo de periodismo musical especializado durante la época de auge operístico en Madrid, documentando la transición del bel canto al verismo.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/cronicamusica/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                    <a href="https://LeximusUSAL.github.io/cronicamusica/" class="btn-acceso">🎻 Acceder al Análisis</a>
                 </div>
             </div>
 
@@ -530,7 +530,7 @@
                     <div class="web-description">
                         <strong>Revista iberoamericana de vanguardia.</strong> Publicada en Barcelona durante la crisis del 29, documentó la recepción de las corrientes musicales modernas y las conexiones culturales España-América en el contexto de la Segunda República.
                     </div>
-                    <a href="https://mariapalaciosnieto.github.io/musica/" class="btn-acceso">🎻 Acceder al Análisis</a>
+                    <a href="https://LeximusUSAL.github.io/musica/" class="btn-acceso">🎻 Acceder al Análisis</a>
                 </div>
             </div>
         </div>
