--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
                         <div class="source-description">
                             <strong>Revista técnica y pedagógica.</strong> Dirigida por Varela Silvari, fue una publicación de referencia para la educación musical española con especial énfasis en terminología técnica y metodología docente.
                         </div>
-                        <a href="boletin_musical_estadisticas.html" class="source-link">
+                         <a href="https://LeximusUSAL.github.io/boletinmusical/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
                             Acceder al Análisis
                         </a>
