--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                     </div>
                     <h4 class="methodology-title">Digitalización Mejorada</h4>
                     <p class="methodology-description">
-                        OCR mejorado respecto a instituciones hemerográficas estándar, con transcripción manual en eScriptorium para mayor precisión y calidad del corpus textual.
+                        OCR mejorado respecto a instituciones hemerográficas estándar. Actualmente trabajando con eScriptorium para mayor precisión y calidad del corpus textual. Web en constante mejora de los datos
                     </p>
                 </div>
 
@@ -945,7 +945,7 @@
                 </p>
                 <p class="footer-text">
                     Proyecto pionero en musicología computacional española que busca crear una ontología 
-                    completa de la música en español mediante el análisis de fuentes históricas.
+                    completa de la música en español mediante el análisis de fuentes históricas. Fuentes completas disponibles en la HEMEROTECA DIGITAL de la Biblioetca Nacional de España
                 </p>
                 
              <div class="footer-logos">
