--- a/index.html
+++ b/index.html
@@ -945,7 +945,8 @@
                 </p>
                 <p class="footer-text">
                     Proyecto pionero en musicología computacional española que busca crear una ontología 
-                    completa de la música en español mediante el análisis de fuentes históricas. Fuentes completas disponibles en la HEMEROTECA DIGITAL de la Biblioetca Nacional de España
+                    completa de la música en español mediante el análisis de fuentes históricas. 
+                    Las fuentes utilizadas en esta web se encuentra para consulta de forma COMPLETA en la HEMEROTECA DIGITAL de la BNE
                 </p>
                 
              <div class="footer-logos">
