--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 <div class="source-card reveal">
                     <div class="source-header">
                         <h3 class="source-title">La Iberia Musical</h3>
-                        <div class="source-period">1842-1845 • Romanticismo Temprano</div>
+                        <div class="source-period">1842-1845 • desde agosto 1842 Musical y Literaria</div>
                     </div>
                     <div class="source-body">
                         <div class="source-stats">
@@ -691,7 +691,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Primera revista musical española.</strong> Análisis del panorama musical madrileño del Romanticismo temprano, con predominio de la ópera italiana y las grandes divas del bel canto. Documento único de la recepción del gusto romántico en España.
+                            <strong>Primera revista musical española.</strong> Análisis del panorama musical madrileño del Romanticismo temprano, con predominio de la ópera italiana y las grandes divas del bel canto. Apareció semanalmente los domingos, en números, generalmente de cuatro páginas y a dos columnas.
                         </div>
                         <a href="https://LeximusUSAL.github.io/IberiaMusical/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
@@ -703,8 +703,8 @@
                 <!-- Revistas Musicales -->
                 <div class="source-card reveal">
                     <div class="source-header">
-                        <h3 class="source-title">Revistas Musicales Especializadas</h3>
-                        <div class="source-period">1909-1917 • Modernismo Musical</div>
+                        <h3 class="source-title">Revistas Musical de Bilbao y Revista Musical Hispano-americana</h3>
+                        <div class="source-period">1909-1917 • Música </div>
                     </div>
                     <div class="source-body">
                         <div class="source-stats">
@@ -726,7 +726,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Revista Musical de Bilbao e Hispanoamericana.</strong> Primera evidencia de equilibrio de género en prensa musical especializada. Análisis de la profesionalización de la crítica musical española y las redes culturales hispanoamericanas.
+                            <strong>Revista Musical de Bilbao y Revista Hispano-americana.</strong> A partir de 1914 la Revista Musical de Bilbao pasó a llamarse Revista Musical Hispano-americana. Fue una publicación fundamental de su época donde escribieron los principales musicógrafos e historiadores de la época.
                         </div>
                         <a href="https://LeximusUSAL.github.io/RevistasBMH/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
@@ -739,7 +739,7 @@
                 <div class="source-card reveal">
                     <div class="source-header">
                         <h3 class="source-title">Periódico "El Sol"</h3>
-                        <div class="source-period">1918-1935 • Vanguardias Musicales</div>
+                        <div class="source-period">1918-1935 • El periódico de la intelectualidad de la época</div>
                     </div>
                     <div class="source-body">
                         <div class="source-stats">
@@ -761,7 +761,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Prensa generalista con cobertura musical.</strong> Análisis de la desigualdad de género en medios generalistas y estudio de la diversidad cultural en la música española del período de entreguerras.
+                            <strong>Prensa generalista con cobertura musical.</strong> Análisis de la desigualdad de género en medios generalistas y estudio de la diversidad cultural en la música española de principios del siglo XX. Entre sus firmas destaca Adolfo Salazar.
                         </div>
                         <a href="https://LeximusUSAL.github.io/analisis-musical-el-sol/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
@@ -796,7 +796,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Segundo periódico musical español.</strong> Dirigido por Andrés Vidal y Llimona, consolidó el modelo de periodismo musical especializado durante la época de auge operístico en Madrid, documentando la transición del bel canto al verismo.
+                            <strong>Revista semanal y biblioteca musical.</strong> Dirigido por Andrés Vidal y Llimona. Publica crónicas de teatro y de conciertos de ópera y zarzuela, artículos sobre instrumentos, técnicas e historia de la música, entre otros
                         </div>
                         <a href="https://LeximusUSAL.github.io/cronicamusica/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
@@ -831,7 +831,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Revista iberoamericana de vanguardia.</strong> Publicada en Barcelona durante la crisis del 29, documentó la recepción de las corrientes musicales modernas y las conexiones culturales España-América en el contexto de la Segunda República.
+                            <strong>Central Catalana de Publicaciones, complemento al Diccionario de la música ilustrado.</strong> Publicada en Barcelona a partir de 1929. Contiene artículos y crónicas de la vida musical, con numerosas fotografías e información sobre el nuevo cine sonoro.
                         </div>
                         <a href="https://LeximusUSAL.github.io/musica/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
@@ -866,7 +866,7 @@
                             </div>
                         </div>
                         <div class="source-description">
-                            <strong>Revista técnica y pedagógica.</strong> Dirigida por Varela Silvari, fue una publicación de referencia para la educación musical española con especial énfasis en terminología técnica y metodología docente.
+                            <strong>Revista quincenal técnica, doctrinaria y de información.</strong> Dirigida por Varela Silvari. Contiene artículos técnicos y sobre composición musical, así como crónicas e informaciones sobre compositores, músicos, artistas, teatros, educación musical, profesorado, biografías y crítica.
                         </div>
                          <a href="https://LeximusUSAL.github.io/boletinmusical/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
