--- a/index.html
+++ b/index.html
@@ -939,14 +939,14 @@
                 <h3 class="footer-title">Proyecto LexiMus</h3>
                 <p class="footer-text">
                     Los análisis presentados forman parte del corpus desarrollado por el proyecto 
-                    <strong>"LexiMus, Léxico y ontología de la música en español"</strong> 
+                   <a href="https://leximus.es/"><strong>"LexiMus, Léxico y ontología de la música en español"</strong></a>
                     (PID2022-139589NB-C33), con sede en la Universidad de Salamanca en colaboración 
                     con el Instituto Complutense de Ciencias Musicales y la Universidad de La Rioja.
                 </p>
                 <p class="footer-text">
                     Proyecto pionero en musicología computacional española que busca crear una ontología 
                     completa de la música en español mediante el análisis de fuentes históricas. 
-                    Las fuentes utilizadas en esta web se encuentra para consulta de forma COMPLETA en la HEMEROTECA DIGITAL de la BNE
+                    Las fuentes utilizadas en esta web se encuentra para consulta de forma COMPLETA en la <a href="https://hemerotecadigital.bne.es/">HEMEROTECA DIGITAL de la BNE</a>
                 </p>
                 
              <div class="footer-logos">
