--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                 </div>
                 
                 <p style="margin-top: 2rem; opacity: 0.7; font-size: 0.9rem;">
-                    © 2025 • Análisis Musical Computacional de Fuentes Históricas
+                    © 2025 • Análisis Musical Computacional de Fuentes Históricas. Desarrollado con Claude Code
                 </p>
             </div>
         </div>
