--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 <h1>LexiMus USAL</h1>
                 <p class="hero-subtitle">Análisis Musical de Prensa Histórica</p>
                 <p class="hero-description">
-                    Procesamiento computacional de corpus textuales musicales que abarcan desde el siglo XVIII hasta la actualidad. 
+                    Procesamiento computacional de corpus textuales sobre música. 
                     Un proyecto pionero en musicología digital y análisis de prensa histórica española.
                 </p>
                 <div class="cta-buttons">
