--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                     Los análisis presentados forman parte del corpus desarrollado por el proyecto 
                   <a href="https://leximus.es/" style="color: #AAA; text-decoration: underline;"><strong>"LexiMus, Léxico y ontología de la música en español"</strong></a>
                     (PID2022-139589NB-C33), con sede en la Universidad de Salamanca en colaboración 
-                    con el Instituto Complutense de Ciencias Musicales y la Universidad de La Rioja. Información sobre proceso y estracción de datos completa <a href="https://github.com/LeximusUSAL/principal?tab=readme-ov-file" style="color: #AAA; text-decoration: underline;"><strong>"AQUÍ"</strong></a>
+                    con el Instituto Complutense de Ciencias Musicales y la Universidad de La Rioja. Información sobre proceso y extracción de datos completa <a href="https://github.com/LeximusUSAL/principal?tab=readme-ov-file" style="color: #AAA; text-decoration: underline;"><strong>"AQUÍ"</strong></a>
                 </p>
                 <p class="footer-text">
                     Proyecto pionero en musicología computacional española que busca crear una ontología 
