--- a/index.html
+++ b/index.html
@@ -635,15 +635,15 @@
             </div>
             <div class="stats-grid">
                 <div class="stat-card reveal">
-                    <div class="stat-number">6</div>
+                    <div class="stat-number">7</div>
                     <div class="stat-label">Fuentes Procesadas</div>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-number">1,966</div>
+                    <div class="stat-number">2,366</div>
                     <div class="stat-label">Números/Artículos</div>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-number">4.9M</div>
+                    <div class="stat-number">6.9M</div>
                     <div class="stat-label">Palabras Analizadas</div>
                 </div>
                 <div class="stat-card reveal">
@@ -799,6 +799,40 @@
                             <strong>Revista semanal y biblioteca musical.</strong> Dirigido por Andrés Vidal y Llimona. Publica crónicas de teatro y de conciertos de ópera y zarzuela, artículos sobre instrumentos, técnicas e historia de la música, entre otros
                         </div>
                         <a href="https://LeximusUSAL.github.io/cronicamusica/" class="source-link">
+                            <i class="fas fa-external-link-alt"></i>
+                            Acceder al Análisis
+                        </a>
+                    </div>
+                </div>
+                 <!-- Semanario España -->
+                <div class="source-card reveal">
+                    <div class="source-header">
+                        <h3 class="source-title">Semanario España</h3>
+                        <div class="source-period">1915-1924 • Semanario de la vida nacional</div>
+                    </div>
+                    <div class="source-body">
+                        <div class="source-stats">
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">410</span>
+                                <span class="mini-stat-label">Números</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">1.8M</span>
+                                <span class="mini-stat-label">Palabras</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">18.2%</span>
+                                <span class="mini-stat-label">Densidad Musical</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">0.82:1</span>
+                                <span class="mini-stat-label">Ratio H:M</span>
+                            </div>
+                        </div>
+                        <div class="source-description">
+                            <strong>Semanario España.</strong> Publicación con más amplia repercusión en la denominada “edad de plata” de la intelectualidad española, el primer proyecto periodístico de José Ortega y Gasset, y en la que confluyen las corrientes reformistas liberal-democráticas y las también antioligárquicas, radicales y antimonárquicas del socialismo.
+                        </div>
+                        <a href="https://LeximusUSAL.github.io/espana/" class="source-link">
                             <i class="fas fa-external-link-alt"></i>
                             Acceder al Análisis
                         </a>
