--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
             </div>
             <div class="stats-grid">
                 <div class="stat-card reveal">
-                    <div class="stat-number">7</div>
+                    <div class="stat-number"> 7</div>
                     <div class="stat-label">Fuentes Procesadas</div>
                 </div>
                 <div class="stat-card reveal">
@@ -643,7 +643,7 @@
                     <div class="stat-label">Números/Artículos</div>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-number">6.9M</div>
+                    <div class="stat-number"> + 6.9M</div>
                     <div class="stat-label">Palabras Analizadas</div>
                 </div>
                 <div class="stat-card reveal">
