--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
                     Primeras Comparativas
                 </h2>
                 <p class="section-subtitle">
-                    Análisis contrastivo entre diferentes corpus para identificar patrones evolutivos en el discurso musical español
+                    Análisis entre diferentes corpus para identificar patrones evolutivos en el discurso musical español
                 </p>
             </div>
 
@@ -1266,14 +1266,14 @@
                 <div class="coming-soon-card reveal">
                     <div class="coming-soon-content">
                         <i class="fas fa-hourglass-half"></i>
-                        <h4>Próximas Comparativas</h4>
+                        <h4>Otros recursos y novedades</h4>
                         <p>
-                            Se están desarrollando nuevos análisis contrastivos que incluirán más fuentes del proyecto LexiMus, 
-                            permitiendo trazar la evolución completa del discurso musical español desde 1842 hasta 2024.
+                            Se están desarrollando nuevos análisis que incluirán más fuentes del proyecto LexiMus, 
+                            permitiendo trazar la evolución del discurso musical español desde 1842 hasta 2024.
                         </p>
                         <div class="coming-soon-features">
-                            <span class="feature-tag">El Sol vs Iberia Musical</span>
-                            <span class="feature-tag">Evolución Secular Completa</span>
+                            <span class="feature-tag"><a href="https://zenodo.org/records/16631496">Modelos para transcripción automática de prensa musical</a></span>
+                            <span class="feature-tag"><a href="https://leximususal.github.io/revista-musical-bilbao-1912/revista_musical_bilbao_viewer.html">Ejemplo de transcripción automática de revista musical</a></span>
                             <span class="feature-tag">Análisis Multitemporales</span>
                         </div>
                     </div>
