--- a/index.html
+++ b/index.html
@@ -941,7 +941,41 @@
             </div>
 
             <div class="sources-grid">
-                <!-- La Iberia Musical -->
+                <!-- Diario de Madrid -->
+                <div class="source-card reveal">
+                    <div class="source-header">
+                        <h3 class="source-title">Diario de Madrid</h3>
+                        <div class="source-period">1788-1800</div>
+                    </div>
+                    <div class="source-body">
+                        <div class="source-stats">
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">13</span>
+                                <span class="mini-stat-label">Años</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">874K</span>
+                                <span class="mini-stat-label">Palabras</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">1.16%</span>
+                                <span class="mini-stat-label">Densidad Musical</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="mini-stat-number">S/D</span>
+                                <span class="mini-stat-label">Ratio H:M</span>
+                            </div>
+                        </div>
+                        <div class="source-description">
+                            <strong>Diario de Madrid.</strong> publicación oficialista y controlada por la Corona, que sobrevivió a varios decretos de supresión de prensa entre 1791 y 1824, manteniendo una línea informativa separada de la opinión y centrada en noticias prácticas, anuncios y curiosidades
+                        </div>
+                        <a href="https://LeximusUSAL.github.io/diario-madrid-analysis/" class="source-link">
+                            <i class="fas fa-external-link-alt"></i>
+                            Acceder al Análisis
+                        </a>
+                    </div>
+                </div>
+                 <!-- La Iberia Musical -->
                 <div class="source-card reveal">
                     <div class="source-header">
                         <h3 class="source-title">La Iberia Musical</h3>
