--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                                 <span class="mini-stat-label">Números</span>
                             </div>
                             <div class="mini-stat">
-                                <span class="mini-stat-number">1.8M</span>
+                                <span class="mini-stat-number">132K</span>
                                 <span class="mini-stat-label">Palabras</span>
                             </div>
                             <div class="mini-stat">
