--- a/index.html
+++ b/index.html
@@ -1310,6 +1310,7 @@
                             permitiendo trazar la evolución del discurso musical español desde 1842.
                         </p>
                         <div class="coming-soon-features">
+                             <span class="feature-tag"><a href="https://leximususal.github.io/diario-madrid-analysis/comparativa.html">Comparativa Diario de Madrid- Iberia Musical</a></span>
                             <span class="feature-tag"><a href="https://zenodo.org/records/16631496">Modelos para transcripción automática de prensa musical</a></span>
                             <span class="feature-tag"><a href="https://leximususal.github.io/revista-musical-bilbao-1912/revista_musical_bilbao_viewer.html">Ejemplo de transcripción automática de revista musical</a></span>
                             <span class="feature-tag">Análisis Multitemporales</span>
