--- a/index.html
+++ b/index.html
@@ -1313,6 +1313,7 @@
                              <span class="feature-tag"><a href="https://leximususal.github.io/diario-madrid-analysis/comparativa.html">Comparativa Diario de Madrid- Iberia Musical</a></span>
                             <span class="feature-tag"><a href="https://zenodo.org/records/16631496">Modelos para transcripción automática de prensa musical</a></span>
                             <span class="feature-tag"><a href="https://leximususal.github.io/revista-musical-bilbao-1912/revista_musical_bilbao_viewer.html">Ejemplo de transcripción automática de revista musical</a></span>
+                            <span class="feature-tag"><a href="https://leximususal.github.io/opera-corpus-iberia-1842/index.html">Análisis concretos. Ópera en la primera serie de Iberia (1842)</a></span> 
                             <span class="feature-tag"><a href="https://leximususal.github.io/comprehensive-spanish-music-magazines/">Prueba de Análisis Multitemporales (1788-2024)</a></span> 
                         </div>
                     </div>
